--- a/CodomottoT/Screen/Contact/Contact.storyboard
+++ b/CodomottoT/Screen/Contact/Contact.storyboard
@@ -1,7 +1,65 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CmG-9f-2kL">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Contact View Controller-->
+        <scene sceneID="boB-lc-yAs">
+            <objects>
+                <viewController storyboardIdentifier="ContactViewController" id="DrQ-QX-5Fh" customClass="ContactViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Do0-3S-HGO"/>
+                        <viewControllerLayoutGuide type="bottom" id="xRG-hS-X7d"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BLA-ot-8gZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Screen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1o-RP-ecW">
+                                <rect key="frame" x="0.0" y="180" width="320" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Uqp-UF-BOD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="T1o-RP-ecW" firstAttribute="centerX" secondItem="BLA-ot-8gZ" secondAttribute="centerX" id="cZb-zs-W9e"/>
+                            <constraint firstItem="T1o-RP-ecW" firstAttribute="centerY" secondItem="BLA-ot-8gZ" secondAttribute="centerY" constant="40.5" id="cwj-PT-Jcq"/>
+                            <constraint firstAttribute="trailing" secondItem="T1o-RP-ecW" secondAttribute="trailing" id="gon-lJ-epZ"/>
+                            <constraint firstItem="T1o-RP-ecW" firstAttribute="leading" secondItem="BLA-ot-8gZ" secondAttribute="leading" id="wCh-y0-3ww"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="607-AT-O2C"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AHy-UL-sgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="561" y="477"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="f6X-WV-oyi">
+            <objects>
+                <navigationController storyboardIdentifier="ContactNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="CmG-9f-2kL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="300"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ygc-aV-91L">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="DrQ-QX-5Fh" kind="relationship" relationship="rootViewController" id="STE-Ca-7hp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r0N-Cq-hOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="161" y="477"/>
+        </scene>
+    </scenes>
 </document>
