Modified role function.

--- a/CodomottoT/Screen/Setting/Setting.storyboard
+++ b/CodomottoT/Screen/Setting/Setting.storyboard
@@ -14,7 +14,7 @@
                         <viewControllerLayoutGuide type="bottom" id="dU3-5S-wvd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="1tA-bh-K9L">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7f4-jM-J6P">
@@ -67,6 +67,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Jl0-Jt-qdL"/>
                     <connections>
                         <outlet property="mainTableView" destination="P1p-ef-4hF" id="WxE-Yq-mLf"/>
                         <outlet property="noDataLabel" destination="7f4-jM-J6P" id="EKJ-Nd-0V9"/>
@@ -74,7 +75,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ck5-ss-epY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1265" y="434"/>
+            <point key="canvasLocation" x="1656" y="434"/>
         </scene>
         <!--User List View Controller-->
         <scene sceneID="y3E-4O-7ZB">
@@ -177,6 +178,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="56A-g2-Lf3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="725" y="-418"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rdq-63-GlR">
+            <objects>
+                <navigationController storyboardIdentifier="RequestUserNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="UDD-cq-Mme" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="300"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MSN-be-D8k">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="C1U-fv-UJZ" kind="relationship" relationship="rootViewController" id="QOB-nB-riG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E8q-ux-ZCx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1265" y="434"/>
         </scene>
     </scenes>
 </document>
