--- a/CodomottoT/Screen/ISW/ISW.storyboard
+++ b/CodomottoT/Screen/ISW/ISW.storyboard
@@ -206,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i4d-17-c2K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1773" y="-471"/>
+            <point key="canvasLocation" x="613" y="257"/>
         </scene>
         <!--Allow Wait View Controller-->
         <scene sceneID="wDL-wr-WUH">
@@ -220,8 +220,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Allow Waiting ..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEi-5v-AAc">
-                                <rect key="frame" x="20" y="72" width="280" height="80"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Allow Waiting ..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEi-5v-AAc">
+                                <rect key="frame" x="20" y="72" width="280" height="55"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -258,7 +258,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2jd-Dn-NQB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1773" y="-117"/>
+            <point key="canvasLocation" x="613" y="611"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="kpc-5A-Xku">
@@ -463,7 +463,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zl7-9A-mZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1384" y="-471"/>
+            <point key="canvasLocation" x="224" y="257"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6KI-sQ-YJF">
@@ -483,7 +483,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ABe-dQ-Uwu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1384" y="-117"/>
+            <point key="canvasLocation" x="224" y="611"/>
         </scene>
     </scenes>
 </document>
